name:                hastefm
version:             0.1.0.0
synopsis:            Fetches some artist info from Last.FM for which no API is provided
description:         Please see README.md
homepage:            https://github.com/0xd34df00d/hastefm
license:             BSD3
license-file:        LICENSE
author:              Georg Rudoy
maintainer:          0xd34df00d@gmail.com
copyright:           2016 Georg Rudoy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lastfm.Photos
  build-depends:       base >= 4.7 && < 5
                     , text == 1.*
                     , tagsoup
                     , aeson == 0.11.*
  default-language:    Haskell2010

executable hastefm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hastefm
                     , snap-server
                     , snap-core
  default-language:    Haskell2010

test-suite hastefm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hastefm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/0xd34df00d/hastefm
